err/armstrong.cli.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/armstrong'...
Listing './lib/python3.5/site-packages/armstrong/cli'...
Listing './lib/python3.5/site-packages/armstrong/cli/commands'...
Compiling './lib/python3.5/site-packages/armstrong/cli/commands/init.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/commands/init.py", line 122
    print "armstrong initialized!"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/armstrong/cli/commands/list_templates.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/commands/list_templates.py", line 11
    print "The following templates are available:"
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/armstrong/cli/main.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/main.py", line 74
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/armstrong/cli/templates'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/apis'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/fixtures'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/media'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/media/armstrong'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/media/armstrong/images'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/requirements'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/settings'...
Compiling './lib/python3.5/site-packages/armstrong/cli/templates/demo/settings/development.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/demo/settings/development.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/armstrong/cli/templates/demo/settings/production.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/demo/settings/production.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/static'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/static/css'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/static/images'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/static/javascript'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/templates'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/templates/armstrong'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/templates/armstrong/includes'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/templates/layout'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/templates/layout/articles'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/demo/urls'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/requirements'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/settings'...
Compiling './lib/python3.5/site-packages/armstrong/cli/templates/paywall/settings/development.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/paywall/settings/development.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/armstrong/cli/templates/paywall/settings/production.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/paywall/settings/production.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/templates'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/templates/layout'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/templates/layout/articles'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/templates/registration'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/paywall/urls'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/apis'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/fixtures'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/requirements'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/settings'...
Compiling './lib/python3.5/site-packages/armstrong/cli/templates/standard/settings/development.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/standard/settings/development.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/armstrong/cli/templates/standard/settings/production.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/standard/settings/production.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/static'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/static/css'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/static/images'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/static/javascript'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/templates'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/templates/armstrong'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/templates/armstrong/includes'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/templates/layout'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/templates/layout/articles'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/standard/urls'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/apis'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/fixtures'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/requirements'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/settings'...
Compiling './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/settings/development.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/tutorial/settings/development.py", line 27
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/settings/production.py'...
***   File "./lib/python3.5/site-packages/armstrong/cli/templates/tutorial/settings/production.py", line 26
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/static'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/templates'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/templates/layout'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/templates/layout/articles'...
Listing './lib/python3.5/site-packages/armstrong/cli/templates/tutorial/urls'...
Listing './lib/python3.5/site-packages/armstrong/cli/tests'...
Listing './lib/python3.5/site-packages/armstrong/cli/tests/commands'...
Listing './lib/python3.5/site-packages/armstrong.cli-1.2.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
